Sayfanın temelleri atıldı. Veritabanı bağlantısı yapılacak /#7

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ngx-quill@13.1.0/lib/quill-editor.component.min.js"></script>
 </head>
 
 <body>
