Refactor login and registration components, update Quill.js script, and remove debug logs from various components

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     crossorigin="anonymous"></script>
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/ngx-quill@13.1.0/lib/quill-editor.component.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
 </head>
 
 <body>
